--- a/app/style.css
+++ b/app/style.css
@@ -1,12 +1,12 @@
 body {
     font-size: 16px;
-    background:bisque;
+    background:darkturquoise;
 }
 h1 {
     font-size: 32px;
 }
 /*  */
 h2 {
-    color: aqua;
-    font-size:48px;
+    color: saddlebrown;
+    font-size:12px;
 }
